# picoDoorAlarm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  hello_alarm.c
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.c
